.helm/templates/010-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: quickstart-application
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  rules:
  - host: vote.quickstart-application.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vote
            port:
              number: 80
  - host: result.quickstart-application.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: result
            port:
              number: 80
